# api_gateway

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  wsgi.py
.github/workflows/: python_actions.yml
apigateway/: app.py  cli.py  config.py  email_templates.py  exceptions.py  extensions.py  models.py  schemas.py  services.py  utils.py  views.py
apigateway/tests/: conftest.py  test_generate_token.py  test_services.py  test_views.py
migrations/: env.py
migrations/versions/: 137ee54fd373_case_insensitive_email.py  26889be04d70_creating_default_user_accounts.py  2e0c0694da22_add_user_ratelimit_level.py  45eb49b7e934_add_ratelimit_to_oauth_clients.py  51f3b3b5cd5d_creating_basic_db_structure.py  6b45dbb33d43_update_role_and_user_table_names.py  8e0d08daa203_new_gateway_version.py  c619e555696_adding_indexes.py  f2f57cb2a5b0_add_index_on_access_token.py  fc5e2283de94_updating_indexes.py
scripts/: generate_oauth_client.py
